--- a/gest_tickets/pubspec.yaml
+++ b/gest_tickets/pubspec.yaml
@@ -29,9 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+
     sdk: flutter
-
-
+    
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,10 +40,19 @@ dependencies:
   google_nav_bar: ^5.0.6
   font_awesome_flutter: ^10.7.0
   firebase_auth: ^5.2.0
+  cloud_firestore: ^5.3.0 
+  date_formatter: ^0.0.4
+  # intl: ^0.19.0
+  # date_format: ^2.0.9
+
+
+
 
 dev_dependencies:
   flutter_test:
+  
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
